force-app/main/default/objects/ASEAN_Product_Daily__c/ASEAN_Product_Daily__c.object-meta.xml
<CustomObject>
    <label>ASEAN Product Daily</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASEAN Product Dailys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>