force-app/main/default/objects/ASEAN_Product_Daily__c/fields/Ref_Qty__c.field-meta.xml
<CustomField>
    <fullName>Ref_Qty__c</fullName>
    <label>Ref Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>