force-app/main/default/objects/ASEAN_Product_Daily__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <label>ReportDate</label>
    <type>Date</type>
</CustomField>