force-app/main/default/objects/ASEAN_Product_Daily__c/fields/Year_Int__c.field-meta.xml
<CustomField>
    <fullName>Year_Int__c</fullName>
    <formula>YEAR(ReportDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>